All desktop pages are ready.

--- a/src/main/webapp/WEB-INF/css/main-common.css
+++ b/src/main/webapp/WEB-INF/css/main-common.css
@@ -1,3 +1,19 @@
+.m-left-10 {
+    margin-left: 10pt;
+}
+
+.m-left-15 {
+    margin-left: 15pt;
+}
+
+
+
+
+
+
+
+
+
 .forwarder-fixed {
     margin: 0;
     padding: 0;
