--- a/src/main/webapp/WEB-INF/css/main-unique.css
+++ b/src/main/webapp/WEB-INF/css/main-unique.css
@@ -1,3 +1,52 @@
+/* Common Header related */
+
+#header {
+	height: 6.5em;
+	width: 100%;
+	min-width: 1200px;
+	background: #404040;
+	color: #FFFFFF;
+}
+
+#header-title {
+	font-family: Arial;
+	font-weight: bold;
+	font-size: 30pt;
+	text-align: center;
+	padding-top: 10pt;
+}
+
+#header-subtitle {
+	font-family: Scriptin;
+	font-size: 20pt;
+	text-align: center;
+}
+
+#header-left-region {
+	float: left;
+	margin-left: 15pt;
+	margin-top: -15pt;
+}
+
+#header-hello-lbl {
+	float: left;
+	margin-top: 3pt;
+}
+
+#header-not-you-lnk {
+	float: left;
+	margin-left: 5pt;
+	margin-top: 3pt;
+}
+
+#header-right-region {
+	float: right;
+	margin-right: 15pt;
+	margin-top: -15pt;
+}
+
+
+
 #content {
 	min-height: 1100px;
 	min-width: 1200px;
@@ -8,27 +57,6 @@
 	margin-left: auto;
 }
 
-#header {
-	height: 6.5em;
-	width: 100%;
-	min-width: 1200px;
-	background: #404040;
-	color: #FFFFFF;
-}
-
-#main-title {
-	font-family: Arial;
-	font-weight: bold;
-	font-size: 30pt;
-	text-align: center;
-	padding-top: 10pt;
-}
-
-#main-subtitle {
-	font-family: Scriptin;
-	font-size: 20pt;
-	text-align: center;
-}
 
 #forwarder {
 	float: right;
@@ -43,16 +71,6 @@
 	border: 4px solid #FFFFFF;
 }
 
-#footer {
-	clear: both;
-	height: 2em;
-	background: #404040;
-	font-family: Tahoma;
-	font-size: 0.7em;
-	text-align: center;
-	padding-top: 0.5em;
-	color: #FFFFFF;
-}
 
 
 
@@ -166,3 +184,16 @@
     font-weight: bold;
 }
 
+
+
+
+#footer {
+	clear: both;
+	height: 2em;
+	background: #404040;
+	font-family: Tahoma;
+	font-size: 0.7em;
+	text-align: center;
+	padding-top: 0.5em;
+	color: #FFFFFF;
+}
