--- a/src/main/webapp/css/main-unique.css
+++ b/src/main/webapp/css/main-unique.css
@@ -1,7 +1,8 @@
 /* Common Header related */
 
 #header {
-	height: 6.5em;
+    height: 10%;
+	min-height: 95px;
 	width: 100%;
 	min-width: 1200px;
 	background: #404040;
@@ -91,8 +92,20 @@
 /* Common content related */
 
 #content {
-	min-height: 1100px;
-	min-width: 1200px;
+    float: left;
+    width: 100%;
+    min-width: 1200px;
+	min-height: 80%;
+}
+
+#content-main {
+    margin-left: 210px;
+    min-width: 1000px;
+}
+
+#content-workshop {
+    margin-left: 240px;
+    min-width: 1000px;
 }
 
 #banner {
@@ -125,6 +138,19 @@
 	border: 4px solid #FFFFFF;
 }
 
+#workshop-navigation {
+    float: left;
+    min-width: 200px;
+    width: 200px;
+    font-family: Arial;
+    font-weight: bold;
+    text-align: center;
+    background: #0099cc;
+    color: #FFFFFF;
+    border: none;
+    margin-left: 15px;
+}
+
 #stage {
 	padding: 5px 10px;
     font-weight: bold;
@@ -132,12 +158,134 @@
     float: left;
 }
 
-#flex-content {
-	float: left;
-	width: 100%;
-	min-height: 85%;
+#main-edit-block {
+    width: 45%;
+    min-width: 450px;
+    float: left;
+    clear: both;
 }
 
+#edit-title-wrapper {
+    float: left;
+    width: 100%;
+    height: 30pt;
+}
+
+#edit-title-label {
+    float: left;
+    font-size: 20pt;
+    margin-top: 10px;
+}
+
+#edit-title-in {
+    float: left;
+    width: 370px;
+    height: 22pt;
+    margin-left: 15px;
+    margin-top: 5px;
+}
+
+#edit-priority-wrapper {
+    float: left;
+    width: 100%;
+    margin-top: 10px;
+}
+
+#giftlist-friends-select-wrapper {
+    float: left;
+    margin-top: 5px;
+}
+
+#giftlist-friends-select {
+    float: left;
+    width: 244pt;
+    height: 18pt;
+    margin-left: 15px;
+}
+
+#select-image-position {
+    float: left;
+    width: 185pt;
+    height: 18pt;
+    margin-left: 20px;
+}
+
+#add-wish-link-in {
+    float: left;
+    width: 210pt;
+    height: 18pt;
+    margin-left: 10px;
+    margin-top: 3px;
+}
+
+#add-wish-link-btn {
+    float: left;
+    width: 70pt;
+    margin-left: 10px;
+    font-weight: bold;
+}
+
+#add-wish-link-wrapper {
+    float: left;
+    width: 100%;
+    margin-top: 20px;
+    margin-bottom: 15px;
+}
+
+#add-wish-description-wrapper {
+    float: left;
+    width: 100%;
+    margin-top: 20px;
+}
+
+#add-wish-description {
+    width: 330pt;
+    height: 100pt;
+}
+
+#wish-title {
+    clear:right;
+    float: left;
+    min-width: 800px;
+    max-width: 1100px;
+    min-height: 30pt;
+    margin-left: 25px;
+    margin-top: 10px;
+    font-size: 20pt;
+    text-align: center;
+}
+
+#wish-primary-wrapper {
+    float: left;
+    width: 100%;
+}
+
+#wish-hero-img {
+    float: left;
+    min-width: 300px;
+    max-width: 40%;
+    min-height: 200px;
+    border: solid 2px;
+    margin-right: 15px;
+}
+
+#wish-priority-label {
+    margin-bottom: 15px;
+}
+
+#wish-categories-wrapper {
+    float: left;
+    min-width: 300px;
+    margin-top: 20px;
+    margin-right: 20px;
+    margin-bottom: 15px;
+}
+
+#wish-links-wrapper {
+    float: left;
+    margin-top: 20px;
+    margin-bottom: 15px;
+}
 
 
 
@@ -177,6 +325,39 @@
 
 
 
+/* Standalone */
+
+#near-search-btn {
+	float: left;
+	min-width: 7em;
+	height: 30pt;
+	font-size: 18pt;
+	font-weight: bold;
+	margin-left: 10px;
+	margin-top: 4px;
+}
+
+#main-workshop-btn {
+    float: left;
+    min-width: 7em;
+    height: 30pt;
+    font-size: 18pt;
+    font-weight: bold;
+    margin: 10px 0;
+}
+
+#switch-workshop-btn {
+    width: 100%;
+    height: 30pt;
+    font-size: 18pt;
+    font-weight: bold;
+    margin-top: 2px;
+    margin-bottom: 10px;
+}
+
+
+
+
 /* Demo Wish */
 
 #demo-wish {
@@ -208,24 +389,12 @@
 
 
 
-/* Standalone */
-
-#add-wish-btn {
-	float: left;
-	min-width: 7em;
-	height: 30pt;
-	font-size: 18pt;
-	font-weight: bold;
-}
-
-
-
-
 /* Common footer related  */
 
 #footer {
 	clear: both;
-	height: 2em;
+	height: 5%;
+    min-height: 2em;
 	background: #404040;
 	font-family: Tahoma;
 	font-size: 0.7em;
