Template functionality is ready.

--- a/src/main/webapp/css/main-common.css
+++ b/src/main/webapp/css/main-common.css
@@ -267,6 +267,8 @@
     float: left;
     width: 224pt;
     height: 18pt;
+    font-weight: bold;
+    font-size: 9pt;
 }
 
 .pick-color-btn-generic {
