--- a/src/main/webapp/css/main-unique.css
+++ b/src/main/webapp/css/main-unique.css
@@ -208,6 +208,8 @@
     width: 185pt;
     height: 18pt;
     margin-left: 20px;
+    font-weight: bold;
+    font-size: 9pt;
 }
 
 #add-wish-link-in {
