--- a/src/main/webapp/css/main-common.css
+++ b/src/main/webapp/css/main-common.css
@@ -310,3 +310,38 @@
     float: left;
     margin-left: 15px;
 }
+
+.btn-file {
+    position: relative;
+    overflow: hidden;
+    width: 100px;
+    height: 20px;
+}
+
+.btn-file input[type=file] {
+    float: none;
+    clear: both;
+    position: absolute;
+    top: 0;
+    left: 0;
+    font-size: 100px;
+    text-align: right;
+    filter: alpha(opacity=0);
+    opacity: 0;
+    outline: none;
+    background: white;
+    cursor: inherit;
+    display: block;
+    width: 100px;
+    height: 20px;
+}
+
+.btn-browse {
+    float: none;
+    clear: both;
+    font-size: 12px;
+    color: #000;
+    border: 1px solid #adada3;
+    background: #e9e9e9;
+    padding: 2px 5px;
+}
