--- a/src/main/webapp/css/main-common.css
+++ b/src/main/webapp/css/main-common.css
@@ -34,6 +34,16 @@
     margin-bottom: 5px;
 }
 
+.success-message {
+    color: #33a338;
+    margin-bottom: 5px;
+}
+
+.success-message-ws {
+    color: #aff2da;
+    margin-bottom: 5px;
+}
+
 .clean-link {
     text-decoration: none;
 }
@@ -199,7 +209,6 @@
     max-width: 1100px;
     min-height: 30pt;
     font-size: 20pt;
-    margin-left: 25px;
     margin-top: 10px;
     text-align: center;
 }
@@ -344,4 +353,10 @@
     border: 1px solid #adada3;
     background: #e9e9e9;
     padding: 2px 5px;
+}
+
+.content-img {
+    max-width: 50px;
+    max-height: 50px;
+    margin: 4px 8px;
 }
