--- a/src/main/webapp/css/main-unique.css
+++ b/src/main/webapp/css/main-unique.css
@@ -23,6 +23,10 @@
 	text-align: center;
 }
 
+#header-subtitle:hover {
+    text-decoration: underline;
+}
+
 #header-left-region {
 	float: left;
 	margin-left: 15pt;
@@ -269,7 +273,7 @@
     min-width: 300px;
     max-width: 40%;
     min-height: 200px;
-    border: solid 2px;
+    max-height: 200px;
     margin-right: 15px;
 }
 
